add git aliases: change branch and track all remote branches

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -7,6 +7,7 @@
         default = current
 [alias]
   a = add
+  b = "!git checkout $(git branch | fzf)"
   c = commit
   cd = checkout develop
   cl = clone
@@ -20,5 +21,6 @@
   p = push -u origin
   pu = pull
   s = status
+  track = "!for BRANCH in $(git branch -a | grep remotes | grep -v HEAD | grep -v master); do git branch --track \"${BRANCH#remotes/origin/}\" \"${BRANCH}\"; done"
 [include]
   path = ~/.gitconfig_custom.inc
