update deploy path

--- a/dot_bashrc.d/maven.bashrc.tmpl
+++ b/dot_bashrc.d/maven.bashrc.tmpl
@@ -13,5 +13,5 @@ alias mvnd='m -Dmaven.test.skip -Dmaven.javadoc.skip=true deploy -P profile-nexu
 alias mvni='m -Dmaven.test.skip -Dmaven.javadoc.skip=true clean install'
 
 # copy maven artifact
-alias d='python3 ~/bin/deploy.py'
+alias d='python3 ~/.local/bin/deploy.py'
 
