git alias: untrack to remove local branches

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -19,6 +19,7 @@
   p = push -u origin
   s = status
   track = "!for BRANCH in $(git branch -a | grep remotes | grep -v HEAD | grep -v master); do git branch --track \"${BRANCH#remotes/origin/}\" \"${BRANCH}\"; done"
+  untrack = "!for BRANCH in $(git branch | grep -v '*'); do git branch -D \"${BRANCH}\"; done"
   work-in-progress = rebase -i @{u}
 [include]
   path = ~/.gitconfig_custom.inc
