--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -23,3 +23,7 @@
   work-in-progress = rebase -i @{u}
 [include]
   path = ~/.gitconfig_custom.inc
+[credential]
+  helper = store
+[credential "https://github.com"]
+  helper = cache
