git fetch --prune and don't exclude master from git track

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -13,12 +13,12 @@
   cd = checkout develop
   cm = checkout master
   cp = cherry-pick
-  f = fetch
+  f = fetch -p
   m = merge
   nb = checkout -b
   p = push -u origin
   s = status
-  track = "!for BRANCH in $(git branch -a | grep remotes | grep -v HEAD | grep -v master); do git branch --track \"${BRANCH#remotes/origin/}\" \"${BRANCH}\"; done"
+  track = "!for BRANCH in $(git branch -a | grep remotes | grep -v HEAD); do git branch --track \"${BRANCH#remotes/origin/}\" \"${BRANCH}\"; done"
   untrack = "!for BRANCH in $(git branch | grep -v '*'); do git branch -D \"${BRANCH}\"; done"
   work-in-progress = rebase -i @{u}
 [include]
