add java6 and java7 aliases

--- a/dot_bashrc.d/java.bashrc.tmpl
+++ b/dot_bashrc.d/java.bashrc.tmpl
@@ -1,5 +1,7 @@
 # Java alternatives
 
+alias java6='sdk use java {{ .java6_version }}'
+alias java7='sdk use java {{ .java7_version }}'
 alias java8='sdk use java {{ .java8_version }}'
 alias java11='sdk use java {{ .java11_version}}'
 alias jv='java -version'
