--- a/dot_bashrc.d/python.bashrc.tmpl
+++ b/dot_bashrc.d/python.bashrc.tmpl
@@ -16,4 +16,8 @@ if [ -d "$HOME/.poetry/bin" ]; then
     export PATH="$HOME/.poetry/bin:$PATH"
 fi
 
+if [ -f "{{ .extra_ca_cert }}" ]; then
+    export REQUESTS_CA_BUNDLE={{ .extra_ca_cert }}
+fi
+
 
