--- a/dot_bashrc.d/maven.bashrc.tmpl
+++ b/dot_bashrc.d/maven.bashrc.tmpl
@@ -9,7 +9,7 @@ if [ -f "{{ .java_truststore_file }}" ]; then
 else
     alias m='mvn'
 fi
-alias mvnp='m -Dmaven.test.skip -Dmaven.javadoc.skip=true clean package'
+alias mvnp='m -Dmaven.test.skip -Dmaven.javadoc.skip=true -DskipMunitTests clean package'
 alias mvnd='m -Dmaven.test.skip -Dmaven.javadoc.skip=true deploy -P profile-nexus'
 alias mvni='m -Dmaven.test.skip -Dmaven.javadoc.skip=true clean install'
 
