--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -14,6 +14,12 @@
   cm = checkout master
   cp = cherry-pick
   f = fetch -p
+  # Show incoming changes with upstream.
+  inbound = !git remote update --prune; git log ..@{upstream}
+  # Show outgoing changes with upstream.
+  outbound = log @{upstream}..
+  # log long format
+  l = log --graph --topo-order --date=short --abbrev-commit --decorate --all --boundary --pretty=format:'%Cgreen%ad %Cred%h%Creset -%C(yellow)%d%Creset %s %Cblue[%cn]%Creset %Cblue%G?%Creset'
   m = merge
   nb = checkout -b
   p = push -u origin
