git merge tool: meld

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -34,3 +34,9 @@
   helper = store
 [credential "https://github.com"]
   helper = cache
+[mergetool "meld"]
+  cmd = meld "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED"
+[merge]
+  tool = meld
+
+
