--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -47,4 +47,7 @@
 [merge]
   tool = meld
 
-
+[core]
+        pager = diff-so-fancy | less --tabs=4 -RFX
+[interactive]
+        diffFilter = diff-so-fancy --patch
