--- a/dot_bashrc.d/python.bashrc.tmpl
+++ b/dot_bashrc.d/python.bashrc.tmpl
@@ -1,6 +1,4 @@
-# -------------------------------------------------------------
-# PYTHON
-# -------------------------------------------------------------
+# python
 
 # pyenv
 if [ -d "$HOME/.pyenv" ]; then
