remove default env file value. Nothing of interest

--- a/dot_bashrc.d/docker.bashrc.tmpl
+++ b/dot_bashrc.d/docker.bashrc.tmpl
@@ -5,6 +5,6 @@ if hash docker 2>/dev/null; then
     {
         $DOCKER_COMPOSE_BIN $(find -name 'docker-compose*.yml' -type f -perm -u+x -printf '%p\t%d\n'  2>/dev/null | sort -n -k2 | cut -f 1 | awk '{print "-f "$0}') $@
     }
-    alias dockup='docker-compose --env-file .env up -d'
-    alias dockdown='docker-compose --env-file .env down'
+    alias dockup='docker-compose up -d'
+    alias dockdown='docker-compose down'
 fi
