--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -17,46 +17,35 @@ if test -e $HOME/.nix-profile/etc/profile.d/nix.sh
     end
 end
 
-if test -d "$HOME/.local/bin"
-    fish_add_path "$HOME/.local/bin"
-end
+fish_add_path "$HOME/.local/bin"
+abbr -a vi vim
 abbr -a cdd "cd {{ .deploydir }}"
 set -x cdd {{ .deploydir }}
 
 # git
-if type -q tig
-  abbr -a tiga tig --all
-end
+abbr -a tiga tig --all
 
 # fzf
-if type -q fzf
-    function p --description "cd project"
-        cd {{ .projectdir }} &&  _fzf_search_directory         
-    end
-    # File find: CTRL+F, Git log: CTRL+G
-    fzf_configure_bindings --directory=\cf --git_log=\cg
+function p --description "cd project"
+    cd {{ .projectdir }} &&  _fzf_search_directory         
 end
+# File find: CTRL+F, Git log: CTRL+G
+fzf_configure_bindings --directory=\cf --git_log=\cg
 
 
 # maven
-if type -q mvn
-    abbr -a m mvn
-    abbr -a mvnp mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true -DskipMunitTests clean package
-    abbr -a mvni mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true clean install
-    abbr -a mvnd mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true deploy -P profile-nexus
-    abbr -a mbump mvn versions:set -DnewVersion=$1 -DgenerateBackupPoms=false
-    abbr -a d python3 ~/.local/bin/deploy.py
-end
+abbr -a m mvn
+abbr -a mvnp mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true -DskipMunitTests clean package
+abbr -a mvni mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true clean install
+abbr -a mvnd mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true deploy -P profile-nexus
+abbr -a mbump mvn versions:set -DnewVersion=$1 -DgenerateBackupPoms=false
+abbr -a d python3 ~/.local/bin/deploy.py
 
 # node
 if test -e "{{ .extra_ca_cert }}"
     set -x NODE_EXTRA_CA_CERTS {{ .extra_ca_cert }}
     set -x NODE_BUILD_CURL_OPTS --insecure
 end
-#if test -d "$HOME/.nodenv"
-#    #set -Ux fish_user_paths $HOME/.nodenv/bin $fish_user_paths
-#    fish_add_path "$HOME/.nodenv/bin"
-#end
 
 # python
 if test -e "{{ .extra_ca_cert }}"
