Disable fish greetings

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -7,6 +7,7 @@ set -gx COLORTERM truecolor
 set -gx EDITOR vim
 set -gx LANG fr_FR.UTF-8
 set -gx LC_ALL fr_FR.UTF-8
+set --universal fish_greeting
 
 # nix
 if test -e $HOME/.nix-profile/etc/profile.d/nix.sh
