--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -26,6 +26,11 @@ set -x cdd {{ .deploydir }}
 
 # git
 abbr -a tiga tig --all
+function __git_fetch_after_cd__on_variable_pwd --on-variable PWD
+    if test -d .git
+        git fetch
+    end
+end
 
 # fzf
 function p --description "cd project"
