--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -47,7 +47,16 @@ abbr -a mvnp mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true -DskipMunitTests cl
 abbr -a mvni mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true clean install
 abbr -a mvnd mvn -Dmaven.test.skip -Dmaven.javadoc.skip=true deploy -P profile-nexus
 function mbump
-    mvn versions:set -DgenerateBackupPoms=false -DnewVersion=$argv
+    if test (count $argv) -eq 0
+        echo "Usage: mbump <version> (means -SNAPSHOT) or mbump <version> <kind> (kind is R or S)"
+    else 
+        if test (count $argv) -gt 1; and test $argv[2] = 'R';
+            set kind = 'RELEASE' 
+        else 
+            set kind = 'SNAPSHOT' 
+        end
+        mvn versions:set -DgenerateBackupPoms=false -DnewVersion=$argv[1]-$kind
+    end
 end
 abbr -a d python3 ~/.local/bin/deploy.py
 
