Add "git co" as "git checkout"

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -11,6 +11,7 @@
   b = "!git checkout $(git branch | fzf)"
   c = commit
   clear = clean -fd
+  co = checkout
   cd = checkout develop
   cm = checkout master
   cp = cherry-pick
