--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -22,6 +22,7 @@ fish_add_path "$HOME/.local/bin"
 abbr -a vi nvim
 abbr -a v nvim
 abbr -a s subl .
+abbr -a r ranger
 abbr -a cdd "cd {{ .deploydir }}"
 set -x cdd {{ .deploydir }}
 
