use diff-so-fancy with fzf CTRL-G (Git log)

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -40,6 +40,7 @@ function p --description "cd project"
 end
 # File find: CTRL+F, Git log: CTRL+G
 fzf_configure_bindings --directory=\cf --git_log=\cg
+set fzf_diff_highlighter diff-so-fancy
 
 # java
 abbr -a m mvn
