ag (aka silver surfer): default to ignore case

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -98,6 +98,7 @@ if status is-interactive
     abbr -a rm "rm --interactive --verbose"
     abbr -a mv "mv --interactive --verbose"
     abbr -a cp "cp --interactive --verbose"
+    abbr -a ag "ag --ignore-case"
 
     # direnv (https://direnv.net)
     if type -q direnv
