Disable tmux session auto-connect

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -123,7 +123,7 @@ if status is-interactive
     end
 
     # run tmux session
-    if not set -q TMUX
-      tmux attach -t build; or tmux new -s build
-    end
+    #if not set -q TMUX
+    #  tmux attach -t build; or tmux new -s build
+    #end
 end
