default behavior: deploy to default deployment dir

--- a/dot_bashrc.d/maven.bashrc.tmpl
+++ b/dot_bashrc.d/maven.bashrc.tmpl
@@ -14,5 +14,5 @@ if hash mvn 2>/dev/null; then
     }
 
     # copy maven artifact
-    alias d='python3 ~/.local/bin/deploy.py'
+    alias d="python3 ~/.local/bin/deploy.py '$cdd'"
 fi
